added more javadoc comments and improved code quality